# rest-json-cpp-boilerplate

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/modules/: Findjsoncpp.cmake  Findrestbed.cmake  Findspdlog.cmake
src/: cpp-rest.cpp  nccdctrl.cpp  nccdctrl.h
